# llm-kb

./: .gitignore  docker-compose.yml  llm-build-guide.md
backend/: pyproject.toml
backend/app/: cli.py  main.py  worker.py
backend/app/api/: uploads.py  wikis.py
backend/app/compilation/: compiler.py  qa.py  wiki_compiler.py
backend/app/core/: auth.py  aws.py  config.py  database.py  filesystem.py  images.py  llm.py  scan_worker.py
backend/app/ingestion/: ingest.py
backend/app/linting/: linter.py
backend/app/models/: __init__.py  user.py  wiki.py  wiki_article.py  wiki_file.py  wiki_job.py
backend/migrations/: 001_create_auth_schema_and_users.sql  002_create_wiki_schema_and_tables.sql  003_create_wiki_articles.sql  004_create_wiki_jobs.sql  005_add_wiki_model_config.sql
backend/prompts/: compilation_plan_system.md  compilation_write_system.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/upload/: FileDropZone.vue  GhostDropZone.vue  UploadDrawer.vue  UploadFileRow.vue  UploadFolderGroup.vue  UploadMiniPanel.vue
frontend/src/components/wiki/: FileTable.vue  JobsTab.vue
frontend/src/lib/: api.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js  kb.js  uploads.js  wikis.js
frontend/src/views/: ArticleView.vue  AskView.vue  Dashboard.vue  LoginView.vue  RawFiles.vue  SearchView.vue  WikiBrowser.vue  WikiDetailView.vue  WikiListView.vue
plans/: 001_plan_wiki_file_upload_s3_guardduty.md
search-engine/: Cargo.toml
search-engine/src/: main.rs
